Promo spacing fix
Added padding to promo

--- a/css/custom.css
+++ b/css/custom.css
@@ -12,7 +12,7 @@ body {
 	overflow: hidden;
 }
 .promo {
-	margin: 10px;
+	padding: 10px;
 }
 .promo img {
 	float: left;
